# crystal-monster

./: .gitignore  CMakeLists.txt  makefile
src/: animatedSprite.cpp  character.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp  player.cpp  sprite.cpp
src/headers/: Point.h  Size.h  animatedSprite.h  character.h  game.h  globals.h  graphics.h  input.h  player.h  sprite.h
